# job-confirm

./: README.md  app.py  database.db  docker-compose.yml  dockerfile  makefile  models.py  pyproject.toml  request.http  request.rest
migrations/: env.py
migrations/versions/: 4bf2dc247210_initial.py  cffe24179204_initial_migration.py  deba43402e24_add_telefoonnummer_to_schoonmaker.py
