[tool.poetry]
name = "jobacknowledge"
version = "0.1.0"
description = ""
authors = ["Jelle <jelle@mx3d.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.23.2"
sqladmin = "^0.14.1"
itsdangerous = "^2.1.2"
starlette-admin = "^0.11.2"
pydantic = {version = "^1.10.12", extras = ["email"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.290"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
